# ChatRAG_backend

./: .env_sample  .gitignore  README.md  main.py  pyproject.toml  test.ipynb
api/model/: queryModel.py  vectorModel.py
api/router/: queryRouter.py  vectorRouter.py
services/agent/: assistant.py
services/llm/: config_llm.py  settings.py
services/vector_store/: creation.py  search.py
