[project]
name = "chatgsk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "fastapi>=0.124.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.0.0",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.9.0",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.4.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "unstructured-inference>=1.5.2",
    "unstructured[pdf]>=0.21.5",
    "uvicorn>=0.38.0",
]
